[gd_scene load_steps=12 format=2]

[ext_resource path="res://Data/MyBase.gd" type="Script" id=1]
[ext_resource path="res://res/d9464-arkhip_font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://res/icons/40_20220530135246.png" type="Texture" id=3]
[ext_resource path="res://res/icons/29_20220320194727.png" type="Texture" id=4]
[ext_resource path="res://res/icons/walk1.png" type="Texture" id=5]
[ext_resource path="res://res/11_20220224153119.png" type="Texture" id=6]
[ext_resource path="res://res/icons/walk11.png" type="Texture" id=7]
[ext_resource path="res://res/icons/walk31.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[node name="Base" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1913.0
margin_bottom = 1077.0
color = Color( 0.866667, 0.768627, 0.584314, 1 )

[node name="Back" type="Button" parent="."]
margin_left = 26.0
margin_top = 984.0
margin_right = 203.0
margin_bottom = 1055.0
custom_fonts/font = SubResource( 1 )
text = "Back"

[node name="Button" type="Button" parent="."]
margin_left = 54.0
margin_top = 34.0
margin_right = 398.0
margin_bottom = 154.0
custom_fonts/font = SubResource( 2 )
text = "Upgrade base"
icon = ExtResource( 6 )
expand_icon = true

[node name="Button2" type="Button" parent="."]
margin_left = 54.0
margin_top = 211.0
margin_right = 398.0
margin_bottom = 346.0
custom_fonts/font = SubResource( 2 )
text = "Upgrade chel"
icon = ExtResource( 4 )
expand_icon = true

[node name="Button3" type="Button" parent="."]
margin_left = 52.0
margin_top = 384.0
margin_right = 401.0
margin_bottom = 514.0
custom_fonts/font = SubResource( 2 )
text = "Upgrade Big"
icon = ExtResource( 3 )
expand_icon = true

[node name="Button4" type="Button" parent="."]
margin_left = 48.0
margin_top = 532.0
margin_right = 402.0
margin_bottom = 662.0
custom_fonts/font = SubResource( 2 )
text = "Upgrade knight"
icon = ExtResource( 5 )
expand_icon = true

[node name="Button5" type="Button" parent="."]
margin_left = 44.0
margin_top = 676.0
margin_right = 406.0
margin_bottom = 795.0
custom_fonts/font = SubResource( 2 )
text = "Upgrade mage"
icon = ExtResource( 7 )
expand_icon = true

[node name="Button6" type="Button" parent="."]
margin_left = 41.0
margin_top = 806.0
margin_right = 407.0
margin_bottom = 932.0
custom_fonts/font = SubResource( 2 )
text = "Upgrade rogue"
icon = ExtResource( 8 )
expand_icon = true

[node name="Label" type="Label" parent="."]
margin_left = 1332.0
margin_top = 7.0
margin_right = 1908.0
margin_bottom = 75.0
custom_colors/font_color = Color( 1, 0.933333, 0.0117647, 1 )
custom_fonts/font = SubResource( 3 )

[node name="Label2" type="Label" parent="."]
margin_left = 418.0
margin_top = 31.0
margin_right = 1542.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 3 )
valign = 1

[node name="Label3" type="Label" parent="."]
margin_left = 425.0
margin_top = 210.0
margin_right = 1549.0
margin_bottom = 343.0
custom_fonts/font = SubResource( 3 )
valign = 1

[node name="Label4" type="Label" parent="."]
margin_left = 425.0
margin_top = 377.0
margin_right = 1549.0
margin_bottom = 510.0
custom_fonts/font = SubResource( 3 )
valign = 1

[node name="Label5" type="Label" parent="."]
margin_left = 436.0
margin_top = 532.0
margin_right = 1560.0
margin_bottom = 665.0
custom_fonts/font = SubResource( 3 )
valign = 1

[node name="Label6" type="Label" parent="."]
margin_left = 436.0
margin_top = 671.0
margin_right = 1560.0
margin_bottom = 804.0
custom_fonts/font = SubResource( 3 )
valign = 1

[node name="Label7" type="Label" parent="."]
margin_left = 431.0
margin_top = 803.0
margin_right = 1555.0
margin_bottom = 936.0
custom_fonts/font = SubResource( 3 )
valign = 1

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
